@@ -73,8 +73,8 @@ LeftJustify			: "Left Justify",
 CenterJustify		: "Center Justify",
 RightJustify		: "Right Justify",
 BlockJustify		: "Block Justify",
-DecreaseIndent		: "Decrease Indent",
-IncreaseIndent		: "Increase Indent",
+DecreaseIndent		: "Nested List Return",
+IncreaseIndent		: "Nested List",
 Blockquote			: "Blockquote",
 CreateDiv			: "Create Div Container",
 EditDiv				: "Edit Div Container",
